# cove-by-aura

./: .gitignore  COVE 取り扱い説明書.docx  README.md  SECURITY.md  aura.spec  cove.spec  env.example  main.py  pyproject.toml
app/: aura.db  database.py
app/services/: recorder.py  transcriber.py
app/services/llm/: __init__.py  claude.py  gemini.py  groq.py  ollama.py  openai.py
app/static/css/: style.css
app/static/js/: recorder.js  settings.js
app/templates/: council.html  help.html  index.html  inquiry.html  settings.html  vault.html
docs/: API.md  ARCHITECTURE.md  BUILD.md  DATABASE.md  FLOW.md  INSTALL.md  README.md  SCREENS.md  USAGE.md
services/: recorder.py
