[project]
name = "aura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.1.3",
    "groq>=1.1.0",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "faster-whisper>=1.2.1; sys_platform == 'win32' or (sys_platform == 'darwin' and platform_machine == 'arm64')",
    "pyinstaller>=6.19.0",
    "pyaudiowpatch>=0.2.12.8; sys_platform == 'win32'",
    "torch>=2.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
